// Vitest Snapshot v1

exports[`Component: Input > masked 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <input
      aria-label="First name"
      class="form-control"
      defaultvalue=""
      id="11"
      type="text"
    />
    Some error
  </div>
</div>
`;

exports[`Component: Input > ui > addon default 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <div
      class="input-group"
    >
      <span
        class="input-group-text"
      >
        Default on the left
      </span>
      <input
        aria-label="First name"
        class="form-control"
        defaultvalue=""
        id="6"
        type="text"
      />
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: Input > ui > default 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <input
      aria-label="First name"
      class="form-control"
      defaultvalue=""
      id="1"
      type="text"
    />
    Some error
  </div>
</div>
`;

exports[`Component: Input > ui > visible label 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <label
      class="form-label"
      for="firstName"
    >
      First name
    </label>
    <input
      class="form-control"
      defaultvalue=""
      id="firstName"
      type="text"
    />
    Some error
  </div>
</div>
`;

